098_bst_map/grade.txt
Grading at 11/17/2022:13:20:39.661644
For commit ID 7be28dd9a10aaf4aec3c4157a775e835ae143d17
Grading at Thu Nov 17 08:20:38 AM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = int; V = int]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = int; V = int]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = int; V = std::__cxx11::basic_string<char>]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = int; V = Tester]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = int; V = Tester]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = int]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = Tester]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = Tester; V = int]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = Tester; V = int]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = Tester; V = std::__cxx11::basic_string<char>]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘BstMap<K, V>::Node* BstMap<K, V>::addHelper(BstMap<K, V>::Node*, const K&, const V&) [with K = Tester; V = Tester]’:
bstmap.h:47:18:   required from ‘void BstMap<K, V>::add(const K&, const V&) [with K = Tester; V = Tester]’
bstmap.h:46:16:   required from here
bstmap.h:60:32: error: ‘addnode’ was not declared in this scope
   60 |         current->left = addnode(current->left, key, value);
      |                         ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
bstmap.h:63:33: error: ‘addnode’ was not declared in this scope
   63 |         current->right = addnode(current->right, key, value);
      |                          ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
